<resources>
    <string name="app_name">Readxiaoshuo</string>
    <string name="image_translucent_bar">Image Translucent Bar Training</string>
    <string name="color_translucent_bar">Color Translucent Bar Training</string>
    <string name="tool_bar">ToolBar Training</string>
    <string name="menu_search">查找</string>
    <string name="menu_refresh">刷新</string>
    <string name="menu_settings">设置</string>
    <string name="menu_about_us">关于</string>
    <string name="home_page">首页</string>
    <string name="zhi_hu">知乎</string>
    <string name="item_01">更新站点表</string>
    <string name="item_02">数据库测试</string>
    <string name="item_03">站点速度检查</string>
    <string name="item_04">更换数据源</string>
    <string name="simple_navigation_drawer">SimpleNavigationDrawer</string>
    <string name="simple_drawer">SimpleDrawer</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="sorta">正序</string>
    <string name="sortb">倒序</string>
    <string name="my_switch">换站点</string>
</resources>
