<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@mipmap/ic_search"
        android:title="@string/menu_search"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_notification"
        android:icon="@mipmap/ic_refresh_white_24dp"
        android:title="@string/menu_refresh"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_item1"
        android:title="@string/item_01"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_item2"
        android:title="@string/item_02"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_item3"
        android:title="@string/item_03"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_item4"
        android:title="@string/item_04"
        app:showAsAction="never" >
    <menu>
        <item android:id="@+id/action_zhandian1" android:title="笔趣阁1" />
        <item android:id="@+id/action_zhandian2" android:title="笔趣阁2" />
        <item android:id="@+id/action_zhandian3" android:title="爱上书屋" />
        <item android:id="@+id/action_zhandian4" android:title="新八一中文网" />
        <item android:id="@+id/action_zhandian5" android:title="八一中文网" />
    </menu>
    </item>
</menu>